--- a/01_html_additional.html
+++ b/01_html_additional.html
@@ -6,6 +6,72 @@
     <title>Document</title>
 </head>
 <body>
+<h1 align="center">Заголовок первого уровня</h1>
+<h3>Предварительно форматированный текст:</h3>
+<pre>
+ x | 0 |
+------------
+   | x |
+------------
+ 0 | x | 0 
+</pre>
+<hr>
+<h3> Тег adress</h3>
+<address>Kuprevicha, 1/1, 220141, Minsk, Belarus. Phone: +375.17.2686911</address>
+<hr>
+<h3>Семантические и функциональные строчные теги</h3>
+<p>Пожелания автора:</p>
+<p><del>Данный текст убрать из монографии</del> и заменить его на <ins> вновь помещённый текст</ins>.</p>
+<hr>
+<h3>Работа со строчными и блоковыми цитатами</h3>
+<p>Цитата короткая:</p>
+<cite>И всё­-таки она вертится!</cite>
+<p>Цитата занимающая несколько предложений:</p>
+<blockquote>
+О сколько нам открытий чудных<br>
+Готовят просвещенья дух<br>
+И опыт, сын ошибок трудных,<br>
+И гений, парадоксов друг,<br>
+И случай, бог изобретатель...
+</blockquote>
+<hr>
+<h3>Семантические и функциональные строчные теги</h3>
+<p><strong>Тэг &lt;STRONG&gt; делает данный фрагмент текста более важным.</strong><em>Тэг &lt;em&gt; менее важным.</em>
+    В то время как теги &lt;b&gt; и &lt;i&gt; делают текст просто <b>полужирным</b> и <i>курсивом</i> соответственно.
+</p>
+<hr>
+<h3>Теги форматирования машинного языка</h3>
+<p>При выполнении программного кода на языке PERL:</p>
+<pre>
+#!/usr/local/bin/perl<br>
+print "Content‐type: text/html\n\n";<br>
+print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";<br>
+</pre>
+<p>Программа выведет:</p>
+<samp>Hello, World!</samp>
+<p>Однако в браузере у нас будет отображаться результат выполнения этой программы:</p>
+<h1>Hello, World!</h1>
+<hr>
+<h3>Комментарии и литералы(мнемоники) в HTML</h3>
+<code>&lt;!--это комметарий --&gt;<br>
+&lt;!--и это также комментарий,<br>
+занимающий более одной строчки--&gt;</code>
+<hr>
+<h3>Теги над­ и подстрочных символов</h3>
+<h4 align="center">Магазин работает:</h4>
+<p align="center">
+    с 08<sup><ins>30</ins></sup> до 18<sup><ins>30</ins></sup><br>
+    обед с 13<sup><ins>00</ins></sup> до 14<sup><ins>00</ins></sup><br>
+    выходной:<ins>суббота</ins>, <ins>воскресенье</ins>
+</p>
+<hr>
+<h3>Вот такой текст</h3>
 
+<hr>
+<h3>Акроним и курсив</h3>
+
+<hr>
+<h3>Тег small внутри абзаца</h3>
+<p align="right"><small>Создано при помощи блокнота&COPY;</small></p>
 </body>
 </html>
