--- a/01_html_additional.html
+++ b/01_html_additional.html
@@ -21,7 +21,8 @@
 <hr>
 <h3>Семантические и функциональные строчные теги</h3>
 <p>Пожелания автора:</p>
-<p><del>Данный текст убрать из монографии</del> и заменить его на <ins> вновь помещённый текст</ins>.</p>
+<p><font color=red><del>Данный текст убрать из монографии</del></font> и заменить его на <font color=blue><ins> 
+    вновь помещённый текст</ins></font>.</p>
 <hr>
 <h3>Работа со строчными и блоковыми цитатами</h3>
 <p>Цитата короткая:</p>
@@ -66,12 +67,14 @@ print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";<br>
 </p>
 <hr>
 <h3>Вот такой текст</h3>
-
+<p><b>Э<sub>т</sub>о <sub>п</sub>р<sub>о</sub>с<sub>т</sub>о <sub>в</sub>е<sub>с</sub>ё<sub>л</sub>ы<sub>й</sub> 
+    т<sub>е</sub>к<sub>с</sub>т</b></p>
 <hr>
 <h3>Акроним и курсив</h3>
-
+<p>
+    <abbr>ТФ</abbr>: Y&#40<em>x</em>&#41=e<sup><em>-i&pi;x</em></sup>+<var>log</var><sub><em>x</em></sub>4</p>
 <hr>
 <h3>Тег small внутри абзаца</h3>
-<p align="right"><small>Создано при помощи блокнота&COPY;</small></p>
+<p align=right><small>Создано при помощи блокнота&COPY;</small></p>
 </body>
 </html>
