--- a/04_html/main/python2.html
+++ b/04_html/main/python2.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <h1>HOW-TO: Программа на Python, Часть 2</h1>
+    <img src="icon-python.png" align="right" width="200" alt="python-logo">
     <ul>
         <li>
-            <a href="python1.html">Программа на Pythom - часть 1</a>
+            <a href="python1.html"><em>Программа на Pythom - часть 1</em></a>
         </li>
         <li>
-            <a href="#">Программа на Python - часть 2</a>
+            <a href="#"><em>Программа на Python - часть 2</em></a>
         </li>
         <li>
-            <a href="python3.html">Программа на Python - часть 3</a>
+            <a href="python3.html"><em>Программа на Python - часть 3</em></a>
         </li>
     </ul>
     <h2>Содержание</h2>
@@ -94,5 +95,12 @@ months =
         Комментарии можно вставлять в любое место в строке, но помните, что Python
         проигнорирует всё, что идёт после '#'.
     </p>
+    <table width="100%">
+        <tr>
+            <td align="left"><a href="python1.html"><img src="back.png" title="back" alt="back-sign"></a></td>
+            <td align="center"><a href="#"><img src="home.png" title="home"  alt="home-sign"></a></td>
+            <td align="right"><a href="python3.html"><img src="next.png" title="next" alt="next-sign"></a></td>
+        </tr>
+    </table>
 </body>
 </html>   
