--- a/04_html/main/python1.html
+++ b/04_html/main/python1.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python1</title>
 </head>
+
 <body>
     <h1>HOW-TO: Программа на Python, Часть 1</h1>
+    <img src="icon-python.png" align="right" width="200" alt="python-logo">
     <ul>
         <li>
-            <a href="#">Программа на Pythom - часть 1</a>
+            <a href="#"><em>Программа на Pythom - часть 1</em></a>
         </li>
         <li>
-            <a href="python2.html">Программа на Python - часть 2</a>
+            <a href="python2.html"><em>Программа на Python - часть 2</em></a>
         </li>
         <li>
-            <a href="python3.html">Программа на Python - часть 3</a>
+            <a href="python3.html"><em>Программа на Python - часть 3</em></a>
         </li>
     </ul>
     <h2>Содержание</h2>
     <h3>HOW-TO:Программа на Pythom - часть 1</h3>
     <ul>
         <li>
-            <a href="#first_app">Наша первая программа</a> 
+            <a href="#first_app">Наша первая программа</a>
         </li>
         <li>
             <a href="#example">Пример цикла For</a>
         </li>
     </ul>
-    <p>Из множества существующих языков программирования Python — один из самых лёгких в изучении. Он создан в конце 80-х годов XX века, 
+    <p>Из множества существующих языков программирования Python — один из самых лёгких в изучении. Он создан в конце
+        80-х годов XX века,
         но с тех пор он сильно изменился. Хотя Python входит в состав большинства дистрибутивов Linux, на него часто не
-       обращают внимания при выборе языка для изучения. В этой статье мы рассмотрим
-       создание консольных приложений, а в следующей — программирование графических
-       интерфейсов <ins>(GUI)</ins>. Давайте создадим простую программу прямо сейчас.
+        обращают внимания при выборе языка для изучения. В этой статье мы рассмотрим
+        создание консольных приложений, а в следующей — программирование графических
+        интерфейсов <ins>(GUI)</ins>. Давайте создадим простую программу прямо сейчас.
     </p>
 
     <h4 id="first_app">Наша первая программа</h4>
@@ -73,7 +77,7 @@ greg@earth:~/python_examples$
     <h3 id="example">Пример цикла For</h3>
     <a href="#">К содержанию</a>
     <p>
-        Теперь давайте рассмотрим пример программирования цикла. 
+        Теперь давайте рассмотрим пример программирования цикла.
         Запустите текстовый редактор и наберите следующую программу:
     </p>
     <pre>
@@ -86,6 +90,14 @@ for cntr in range(0,10):
         Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки
         как в других языках программирования, а отступы.
     </p>
+    <table width="100%">
+        <tr>
+            <td align="left"><a href="#"><img src="back.png" title="back" alt="back-sign"></a></td>
+            <td align="center"><a href="#"><img src="home.png" title="home"  alt="home-sign"></a></td>
+            <td align="right"><a href="python2.html"><img src="next.png" title="next" alt="next-sign"></a></td>
+        </tr>
+    </table>
 
 </body>
+
 </html>
