--- a/04_html/main/python3.html
+++ b/04_html/main/python3.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <h1>HOW-TO: Программа на Python, Часть 3</h1>
+    <img src="icon-python.png" align="right" width="200" alt="python-logo">
     <ul>
         <li>
-            <a href="python1.html">Программа на Pythom - часть 1</a>
+            <a href="python1.html"><em>Программа на Pythom - часть 1</em></a>
         </li>
         <li>
-            <a href="python2.html">Программа на Python - часть 2</a>
+            <a href="python2.html"><em>Программа на Python - часть 2</em></a>
         </li>
         <li>
-            <a href="#">Программа на Python - часть 3</a>
+            <a href="#"><em>Программа на Python - часть 3</em></a>
         </li>
     </ul>
     <h2>Содержание</h2>
@@ -119,5 +120,12 @@ DoTwo(10,5)
         мы сможем сделать это, не создавая проблем для нашей программы. Чтобы вызвать функцию, нужно написать её имя
          и параметры.
     </p>
+    <table width="100%">
+        <tr>
+            <td align="left"><a href="python2.html"><img src="back.png" title="back" alt="back-sign"></a></td>
+            <td align="center"><a href="#"><img src="home.png" title="home"  alt="home-sign"></a></td>
+            <td align="right"><a href="#"><img src="next.png" title="next" alt="next-sign"></a></td>
+        </tr>
+    </table>
 </body>
 </html>
