--- a/01_CSS/main2/index.html
+++ b/01_CSS/main2/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letter</title>
+    <style>
+        h3{
+            text-align: right;
+        }
+        address{
+            text-align: right;
+        }
+        .text1{
+            text-align: right;
+        }
+        h2{
+            font: bad script;
+            font-style: ins;
+        }
+
+    </style>
 </head>
 <body>
     <h3>Пример сопроводительного письма программиста</h3>
     <address>10943, Одесса - 43, ул.Малышева, 33, кв.15</address>
-    <p>15 марта 2006 г.Г-ну Иванову Петру Васильевичу,<br>
+    <p class="text1">15 марта 2006 г. Г-ну Иванову Петру Васильевичу,<br>
         Менеджеру по персоналу<br>
         Компании ВСС,</p>
     <address>10946, Днепропетровск - 46, ул.Валдая, 47</address>
