--- a/01_CSS/main2/index.html
+++ b/01_CSS/main2/index.html
@@ -4,22 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letter</title>
-    <style>
-        h3{
-            text-align: right;
-        }
-        address{
-            text-align: right;
-        }
-        .text1{
-            text-align: right;
-        }
-        h2{
-            font: bad script;
-            font-style: ins;
-        }
-
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h3>Пример сопроводительного письма программиста</h3>
@@ -31,16 +17,16 @@
     <br>
     <br>
     <h2>Уважаемый г-н Иванов!</h2>
-    <p>
+    <p class="text2">
         Меня заинтересовала вакансия на должность разработчика ПО, 
         размещенная на сайте www.jobs.ua. Мой выбор был мотивирован интересом к проектированию ПО и БД.
     </p>
-    <p>
+    <p class="text2">
         Владею базоваыми знаниями SQL - Sybase, OOAEOOOD, UML; Power Builder (или VC++, Visual Basic, Java, Delfi); .NET.
         Имею опыт разработки приложений в сфере IT, благодаря которому могу внести свой вклад в успешное продвижение вашей
         компании. Прилагаю копию своего резюме, с детальным описанием квалификации.
     </p>
-    <p>
+    <p class="text2">
         Предлагаю на рассмотрение свою кандидатуру в качестве разработчика ПО. Был бы рад встречи с вами. 
         Вы можете связаться со мной по указанному адресу или телефону (518)271-9999.
     </p>
